--- a/package.json
+++ b/package.json
@@ -27,24 +27,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.7",
+    "@angular/animations": "^5.2.7",
+    "@angular/cdk": "^6.0.0",
     "@angular/common": "5.2.7",
     "@angular/compiler": "5.2.7",
     "@angular/core": "5.2.7",
+    "@angular/flex-layout": "^5.0.0-beta.14",
     "@angular/forms": "5.2.7",
+    "@angular/material": "^6.0.0",
     "@angular/platform-browser": "5.2.7",
     "@angular/platform-browser-dynamic": "5.2.7",
     "@angular/router": "5.2.7",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
-    "@nrwl/nx": "1.0.3",
     "@ngrx/effects": "5.2.0",
     "@ngrx/router-store": "5.0.1",
     "@ngrx/store": "5.2.0",
     "@ngrx/store-devtools": "5.2.0",
+    "@nrwl/nx": "1.0.3",
+    "core-js": "^2.4.1",
     "ngrx-store-freeze": "^0.2.1",
-    "viz": "^0.0.1"
+    "rxjs": "^5.5.6",
+    "viz": "^0.0.1",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.7.1",
